# Proyecto-Construccion

./: .gitignore  README.md  goal_visualizer.py  setup.py
Elenas_code/: comandos.txt
Julia/src/Proyecto-Construccion-Julia/: README.md
Julia/src/Proyecto-Construccion-Julia/Elenas_code/: piece_detection_publisher.py
Julia/src/Proyecto-Construccion-Julia/calibration_package/: package.xml
Julia/src/Proyecto-Construccion-Julia/construccion_interfaces/: CMakeLists.txt  package.xml  package.xml.save
Julia/src/Proyecto-Construccion-Julia/custom_interfaces/: package.xml
Julia/src/Proyecto-Construccion-Julia/detection_node/: package.xml
Julia/src/Proyecto-Construccion-Julia/gantry_description/: package.xml
Julia/src/Proyecto-Construccion-Julia/gantry_description/rviz/: view_robot.rviz
Julia/src/Proyecto-Construccion-Julia/gantry_description/urdf/: gantry_frame.urdf.xacro  robot_lab.urdf.xacro
Julia/src/Proyecto-Construccion-Julia/gantry_system_moveit_setup/: README.md
Julia/src/Proyecto-Construccion-Julia/robot_control_julia/: CMakeLists.txt
Julia/src/Proyecto-Construccion-Julia/robot_control_julia/launch/: move_pilz.launch.py  move_to_point_ok.launch.py  nodo90grados.launch.py
Julia/src/Proyecto-Construccion-Julia/robot_control_julia/src/: move_to_pose.cpp  movimiento_robot.cpp
Julia/src/Proyecto-Construccion-Julia/robot_controller/: CMakeLists.txt
Julia/src/Proyecto-Construccion-Julia/robot_system/: CMakeLists.txt
Paula/src/: README.md  README2.md
Paula/src/calibration_services/: setup.py
Paula/src/calibration_services/calibration_services/: plane_transform_server.py
Paula/src/config/: camera_parameters.txt  plane_calibration.yaml
Paula/src/construccion_interfaces/: CMakeLists.txt
Paula/src/construccion_interfaces/srv/: GripperController.srv
Paula/src/piece_detection_pkg/: setup.cfg  setup.py
Paula/src/piece_detection_pkg/piece_detection_pkg/: helper.py  piece_detection_node.py  piece_detection_node_distance_peak.py  piece_detection_node_second.py  piece_detection_node_third.py  tower_detection_phase_node.py
Rick/src/background/: metadata.yaml
Rick/src/calibration_package/calibration_package/: analysis_threshold.py  calibration_node.py  click_image.py  code.py
Rick/src/calibration_package/config/: color_calibration.yaml
Rick/src/ejecutor/: package.xml  setup.cfg  setup.py
Rick/src/ejecutor/ejecutor/: ejecutor.py  (+1 more)
Rick/src/pieces/: metadata.yaml
Rick/src/rosbag2_2026_04_21-00_55_44/: metadata.yaml
Rick/src/torrebackground/: metadata.yaml
Rick/src/torrepieces/: metadata.yaml
calibration_package/: setup.cfg  setup.py
calibration_package/calibration_package/: analysis_threshold.py  calibration_node.py
calibration_services/: package.xml  setup.cfg
calibration_services/calibration_services/: plane_transform_server.py
config/: camera_intrinsics.yaml  plane_calibration.yaml
construccion_interfaces/: CMakeLists.txt  package.xml
construccion_interfaces/srv/: MoveCartesian.srv  RobotToPixel.srv
custom_interfaces/: CMakeLists.txt
custom_interfaces/srv/: AdjustRobotSpeed.srv  DetectSpecificColor.srv  MovePreset.srv
detection_node/: setup.py
detection_node/detection_node/: helper.py  piece_detection_node.py  piece_detection_node_second.py  piece_detection_publisher.py
ejecutor_completo/: package.xml  setup.cfg  setup.py
ejecutor_completo/ejecutor_completo/: executor_node.py
gantry_description/: CMakeLists.txt  README.md
gantry_description/config/: default_kinematics.yaml  gantry_environment.yaml  initial_positions.yaml  joint_limits.yaml
gantry_description/launch/: system_control_driver.launch.py
gantry_description/urdf/: gantry_frame.urdf.xacro  system_ros2.urdf.xacro
gantry_system_moveit_setup/: CMakeLists.txt  package.xml
gantry_system_moveit_setup/config/: gantry_environment.yaml  gantry_system.srdf  gantry_system.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
image_capturer/: package.xml  setup.cfg  setup.py
image_capturer/image_capturer/: image_capture.py
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
log/: latest_build
main/: package.xml  setup.py
main/launch/: full_system_launch.launch.py
moveit_setup_robot_lab/: .setup_assistant  CMakeLists.txt  package.xml
moveit_setup_robot_lab/config/: joint_limits.yaml  moveit_controllers.yaml  robot_lab.srdf
moveit_setup_robot_lab/config/ur3e/: initial_positions.yaml  joint_limits copy.yaml  joint_limits.yaml  robot_lab.urdf.xacro
moveit_setup_robot_lab/launch/: demo.launch.py  driver_ur34.launch.py  full_system_launch.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  system_control_driver.launch.py
moveit_setup_robot_lab/urdf/: end_effector.urdf.xacro  output.urdf  robot_lab.urdf.xacro
piece_detection_pkg/: node_detection.py  package.xml  piece_detection_node_final.py  readme.md  setup.py
piece_detection_pkg/piece_detection_pkg/: piece_detection_node.py  piece_detection_sinBackground.py  prueba.py  readme.md  tower_detection_phase_node.py
piezas_detectar/: lego_pipeline_fixed.py
piezas_detectar/results/: lego_detected_fixed.csv  lego_detected_fixed.json
robot_control/: CMakeLists.txt  package.xml
robot_control/config/: joint_limits.yaml
robot_control/launch/: nodo90grados.launch.py
robot_control/src/: move_to_pose.cpp  nodo90grados.cpp  pick_place.cpp
robot_control_julia/: CMakeLists.txt  package.xml
robot_control_julia/launch/: move_to_point_ok_orientacion.launch.py  move_to_pose.launch.py  movimiento_robot.launch.py  pick_place.launch.py
robot_control_julia/src/: move_pilz.cpp  move_to_point.cpp  move_to_point_ok.cpp  move_to_point_ok_orientacion.cpp  movimiento_robot.cpp  nodo90grados.cpp
robot_controller/: package.xml
robot_controller/src/: robot_controller.cpp
robot_system/: package.xml
src/piece_detection_pkg/: package.xml  setup.py
src/piece_detection_pkg/piece_detection_pkg/: Readme.md  loose_piece_detection_node.py  piece_detection_sinBackground.py  tower_detection_phase_node.py
(+44 files in other folders)
