<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration_services</name>
  <version>0.0.0</version>
  <description>Servicios para usar la homografía de calibración</description>
  <maintainer email="pauli03ta@gmail.com">paula</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>construccion_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
